:test_tube: Unit test
Added unit test
